rusty-cdk-macros/tests/fails/timeout_too_high.rs
use rusty_cdk_macros::timeout;

fn example() {
    let t = timeout!(1000);
}

fn main() {}